app3.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  labels:
    app: app3
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
     spec:
       containers:
       - name: nginx-app1
         image: nginx:alpine
         volumeMounts:
         - name: data
           mountPath: /usr/share/nginx/html
       volumes:
       - name: emptydir
         emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: app3-svc
  labels:
    app: app3
  namespace: demo
spec:
  selector:
    app: app3
  ports:
  - port: 80
    targetPort: 80
